style.css
body {
    margin: 0;
}

#app {
    width: 100vw;
    height: 100vh;
    font-family: Visby;
    background-color: #468091;
    color: #FAFAFA;
}

@font-face {
    font-family: Visby;
    src: url("/fonts/VisbyRoundCF-Regular.woff");
}

@font-face {
    font-family: Visby;
    src: url("/fonts/VisbyRoundCF-ExtraBold.woff");
    font-weight: bold;
}

.pink-button {
    height: 100px;
    width: 700px;
    background-color: #ed2265;
    border: 0px;
    border-radius: 75px;
    font-family: Visby;
    font-weight: bold;
    font-size: 36pt;
    color: #FAFAFA;
    outline: 0;
}

.pink-button:active {
    background-color: #9c1542;
}

.white-button {
    height: 100px;
    width: 700px;
    background-color: #FAFAFA;
    border: 0px;
    border-radius: 75px;
    font-family: Visby;
    font-weight: bold;
    font-size: 36pt;
    color: #303030;
    outline: 0;
}

.white-button:active {
    background-color: #9e9e9e;
}

.grey-button {
    height: 100px;
    width: 700px;
    background-color: #303030;
    border: 0px;
    border-radius: 75px;
    font-family: Visby;
    font-weight: bold;
    font-size: 36pt;
    color: #FAFAFA;
    outline: 0;
}

.grey-button:active {
    background-color: #000000;
}

/* CINDY START */

/* CINDY END */

/* SOPHIA START */

/* SOPHIA END */

/* CHLOE START */

/* CHLOE END */

